src/test/ui/issue-13847.stderr
error[E0609]: no field `is_failure` on type `!`
  --> $DIR/issue-13847.rs:12:12
   |
LL |     return.is_failure //~ ERROR no field `is_failure` on type `!`
   |            ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
